--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,8 +1,15 @@
 {
-    "responseOverrides": {
-      "404": {
-        "rewrite": "/404",
-        "statusCode": 404
-      }
+  "responseOverrides": {
+    "404": {
+      "rewrite": "/404",
+      "statusCode": 404
     }
+  },
+  "globalHeaders": {
+    "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://api.fontshare.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com https://api.fontshare.com; img-src 'self' https://images.unsplash.com data:; connect-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self'",
+    "X-Content-Type-Options": "nosniff",
+    "X-Frame-Options": "DENY",
+    "Referrer-Policy": "strict-origin-when-cross-origin",
+    "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
+  }
 }
